// Generated from SEAL-BE/prisma/schema.prisma
// Database provider: PostgreSQL

Enum Role {
  student
  stakeholder
  organizer
  admin
}

Enum StudentType {
  fpt
  external
}

Enum EventStatus {
  draft
  active
  ongoing
  closed
}

Enum Season {
  Spring
  Summer
  Fall
}

Enum RoundStatus {
  not_started
  open
  closed
  results_published
}

Enum SubmissionType {
  file
  github_link
}

Enum TeamStatus {
  pending
  approved
  rejected
  disqualified
}

Enum RoundResultStatus {
  competing
  advanced
  eliminated
}

Enum TeamMemberRole {
  leader
  member
}

Enum TeamMemberStatus {
  pending
  accepted
  rejected
}

Enum SubmissionStatus {
  submitted
  under_review
  valid
  flagged_violation
  disqualified
}

Enum NotificationType {
  registration_received
  registration_approved
  registration_rejected
  team_assigned
  round_opened
  round_result
  finalist
  final_result
  judge_assigned
  mentor_assigned
  team_invite_accepted
  team_invite_rejected
  team_leadership_transfer
  deadline_reminder
}

Enum FeedbackStatus {
  unread
  acknowledged
  completed
}

Table users {
  id                   int       [pk, increment]
  email                varchar   [not null, unique]
  name                 varchar   [not null]
  google_id            varchar   [null, unique]
  github_id            varchar   [null, unique]
  password_hash        varchar   [null]
  role                 Role      [not null, default: 'student']
  hashed_refresh_token varchar   [null]
  is_active            boolean   [not null, default: true]
  avatar_url           varchar   [null]
  created_at           timestamp [not null, default: `now()`]
  updated_at           timestamp [not null, default: `now()`]
}

Table student_profiles {
  id              int         [pk, increment]
  user_id         int         [not null, unique, ref: > users.id]
  student_type    StudentType [not null]
  student_code    varchar     [not null]
  university_name varchar     [null]
  phone           varchar     [null]
  github_username varchar     [null]
}

Table stakeholder_profiles {
  id           int       [pk, increment]
  user_id      int       [not null, unique, ref: > users.id]
  job_title    varchar   [null]
  organization varchar   [null]
  experience   varchar   [null]
  achievements varchar   [null]
  bio          varchar   [null]
  is_public    boolean   [not null, default: true]
  created_at   timestamp [not null, default: `now()`]
  updated_at   timestamp [not null, default: `now()`]
}

Table events {
  id                    int         [pk, increment]
  name                  varchar     [not null]
  description           varchar     [null]
  image_url             varchar     [null]
  season                Season      [not null]
  year                  int         [not null]
  status                EventStatus [not null, default: 'draft']
  max_teams             int         [null]
  registration_deadline timestamp   [null]
  start_date            timestamp   [null]
  end_date              timestamp   [null]
  github_org_url        varchar     [null]
  faq                   json        [null]
  contact               text        [null]
  location              varchar     [null]
  rules                 text        [null]
  created_by            int         [not null, ref: > users.id]
  created_at            timestamp   [not null, default: `now()`]
  updated_at            timestamp   [not null, default: `now()`]

  indexes {
    (created_by)
    (status)
    (season, year)
    (created_at)
    (start_date)
    (end_date)
  }
}

Table event_prizes {
  id          int       [pk, increment]
  event_id    int       [not null, ref: > events.id]
  name        varchar   [not null]
  description varchar   [null]
  quantity    int       [not null, default: 1]
  created_at  timestamp [not null, default: `now()`]
}

Table tracks {
  id                   int       [pk, increment]
  event_id             int       [not null, ref: > events.id]
  name                 varchar   [not null]
  description          varchar   [null]
  max_members_per_team int       [null]
  created_at           timestamp [not null, default: `now()`]
}

Table rounds {
  id                  int            [pk, increment]
  event_id            int            [not null, ref: > events.id]
  round_number        int            [not null]
  name                varchar        [not null]
  status              RoundStatus    [not null, default: 'not_started']
  submission_type     SubmissionType [not null]
  submission_deadline timestamp      [null]
  max_file_size_mb    int            [not null, default: 20]
  is_track_specific   boolean        [not null, default: true]
  created_at          timestamp      [not null, default: `now()`]
  updated_at          timestamp      [not null, default: `now()`]

  indexes {
    (event_id, round_number) [unique]
  }
}

Table criteria {
  id          int       [pk, increment]
  name        varchar   [not null]
  description varchar   [null]
  max_score   int       [not null, default: 10]
  weight      decimal   [not null, default: 1.0]
  round_id    int       [not null, ref: > rounds.id]
  track_id    int       [null, ref: > tracks.id]
  created_by  int       [not null, ref: > users.id]
  created_at  timestamp [not null, default: `now()`]
  updated_at  timestamp [not null, default: `now()`]
}

Table teams {
  id                 int        [pk, increment]
  event_id           int        [not null, ref: > events.id]
  track_id           int        [not null, ref: > tracks.id]
  name               varchar    [not null]
  status             TeamStatus [not null, default: 'pending']
  elimination_reason varchar    [null]
  github_repo_url    varchar    [null]
  github_repo_name   varchar    [null]
  leader_id          int        [not null, ref: > users.id]
  award_id           int        [null, ref: > event_prizes.id]
  created_at         timestamp  [not null, default: `now()`]
  updated_at         timestamp  [not null, default: `now()`]
}

Table team_rounds {
  id         int               [pk, increment]
  team_id    int               [not null, ref: > teams.id]
  round_id   int               [not null, ref: > rounds.id]
  status     RoundResultStatus [not null, default: 'competing']
  score      decimal           [null]
  created_at timestamp         [not null, default: `now()`]
  updated_at timestamp         [not null, default: `now()`]

  indexes {
    (team_id, round_id) [unique]
  }
}

Table team_members {
  id        int              [pk, increment]
  team_id   int              [not null, ref: > teams.id]
  user_id   int              [not null, ref: > users.id]
  role      TeamMemberRole   [not null]
  status    TeamMemberStatus [not null, default: 'pending']
  joined_at timestamp        [not null, default: `now()`]

  indexes {
    (team_id, user_id) [unique]
    (team_id, status)
    (user_id, status)
  }
}

Table student_registrations {
  id          int       [pk, increment]
  user_id     int       [not null, ref: > users.id]
  event_id    int       [not null, ref: > events.id]
  track_id    int       [not null, ref: > tracks.id]
  has_team    boolean   [not null, default: false]
  skills      varchar   [null]
  reviewed_by int       [null, ref: > users.id]
  reviewed_at timestamp [null]
  note        varchar   [null]
  created_at  timestamp [not null, default: `now()`]

  indexes {
    (user_id, event_id) [unique]
    (event_id, created_at)
    (event_id, reviewed_at)
  }
}

Table submissions {
  id                  int              [pk, increment]
  team_id             int              [not null, ref: > teams.id]
  round_id            int              [not null, ref: > rounds.id]
  status              SubmissionStatus [not null, default: 'submitted']
  file_url            varchar          [null]
  file_key            varchar          [null]
  github_url          varchar          [null]
  description         text             [null]
  history             json             [null]
  submitted_by        int              [not null, ref: > users.id]
  submitted_at        timestamp        [not null, default: `now()`]
  updated_at          timestamp        [not null, default: `now()`]
  violation_reason    varchar          [null]
  disqualified_by     int              [null, ref: > users.id]
  disqualified_at     timestamp        [null]

  indexes {
    (team_id, round_id) [unique]
    (round_id, submitted_at)
    (status)
  }
}

Table scores {
  id            int       [pk, increment]
  submission_id int       [not null, ref: > submissions.id]
  judge_id      int       [not null, ref: > users.id]
  criterion_id  int       [not null, ref: > criteria.id]
  score_value   decimal   [not null]
  comment       varchar   [null]
  scored_at     timestamp [not null, default: `now()`]
  updated_at    timestamp [not null, default: `now()`]

  indexes {
    (submission_id, judge_id, criterion_id) [unique]
  }
}

Table judge_assignments {
  id          int       [pk, increment]
  judge_id    int       [not null, ref: > users.id]
  round_id    int       [not null, ref: > rounds.id]
  track_id    int       [null, ref: > tracks.id]
  assigned_by int       [not null, ref: > users.id]
  assigned_at timestamp [not null, default: `now()`]

  indexes {
    (judge_id, round_id, track_id) [unique]
  }
}

Table mentor_assignments {
  id          int       [pk, increment]
  mentor_id   int       [not null, ref: > users.id]
  team_id     int       [not null, ref: > teams.id]
  assigned_by int       [not null, ref: > users.id]
  assigned_at timestamp [not null, default: `now()`]

  indexes {
    (mentor_id, team_id) [unique]
  }
}

Table mentor_feedbacks {
  id            int            [pk, increment]
  mentor_id     int            [not null, ref: > users.id]
  team_id       int            [not null, ref: > teams.id]
  submission_id int            [not null, ref: > submissions.id]
  content       varchar        [not null]
  status        FeedbackStatus [not null, default: 'unread']
  created_at    timestamp      [not null, default: `now()`]
}

Table notifications {
  id            int              [pk, increment]
  user_id       int              [not null, ref: > users.id]
  event_id      int              [null, ref: > events.id]
  type          NotificationType [not null]
  title         varchar          [not null]
  content       varchar          [not null]
  is_email_sent boolean          [not null, default: false]
  is_read       boolean          [not null, default: false]
  sent_at       timestamp        [null]
  created_at    timestamp        [not null, default: `now()`]
}

Table activity_events {
  id          int       [pk, increment]
  user_id     int       [not null, ref: > users.id]
  event_id    int       [null, ref: > events.id]
  action      varchar   [not null]
  module      varchar   [not null]
  occurred_at timestamp [not null, default: `now()`]

  indexes {
    (user_id, occurred_at)
    (event_id, occurred_at)
    (occurred_at)
  }

  Note: 'User activity log used by the Organizer Dashboard to aggregate active users by time and role.'
}

Table team_messages {
  id         int       [pk, increment]
  team_id    int       [not null, ref: > teams.id]
  sender_id  int       [not null, ref: > users.id]
  content    text      [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  is_edited  boolean   [not null, default: false]
  is_deleted boolean   [not null, default: false]
}

Table team_message_reads {
  id         int       [pk, increment]
  message_id int       [not null, ref: > team_messages.id]
  user_id    int       [not null, ref: > users.id]
  read_at    timestamp [not null, default: `now()`]

  indexes {
    (message_id, user_id) [unique]
  }
}
